syntax = "proto3";

package price;

option go_package = "dex-indexer-sol/pb;pb";

service PriceService {
  rpc GetPriceHistory (GetPriceHistoryRequest) returns (GetPriceHistoryResponse);
}

// 请求参数
message GetPriceHistoryRequest {
  int32 chainId = 1;                  // 链ID: 0=solana, 1=ethereum, ...
  repeated string tokenAddresses = 2; // token地址 (base58 string)
  int64 fromTimestamp = 3;           // 起始时间戳（秒）
}

// token 每个时间点的价格（单位是 USD）
message TokenPricePoint {
  int64 timestamp = 1;   // 打点时间戳（秒）
  double priceUsd = 2;    // 单价（1 token 对应的 USD 价格）
}

// token 的时间序列
message TokenPriceHistory {
  repeated TokenPricePoint points = 1;
}

// 返回值：tokenAddress(base58 string) -> 时间序列
message GetPriceHistoryResponse {
  map<string, TokenPriceHistory> prices = 1;
}
